// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brokers Component Brokers Empty matches Brokers Empty snapshot 1`] = `
.c1 {
  padding: 1.5rem 1rem;
  background: #F1F2F3;
  margin-bottom: 0.5rem !important;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  background-color: white;
  height: 68px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 150px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 12px 16px;
  box-shadow: 3px 3px 3px rgba(0,0,0,0.08);
  margin: 0 0 3px 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  font-weight: 500;
  font-size: 12px;
  color: #73848C;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 > .c3:first-child {
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c2 > .c3:last-child {
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c7 {
  color: #ABB5BA;
  font-size: 14px;
}

.c6 {
  border: none;
  border-radius: 16px;
  height: 20px;
  line-height: 20px;
  background-color: #E3E6E8;
  color: #171A1C;
  font-size: 12px;
  display: inline-block;
  padding-left: 0.75em;
  padding-right: 0.75em;
  text-align: center;
}

.c9 {
  padding: 4px 0 4px 24px !important;
  border-bottom-width: 1px !important;
  vertical-align: middle !important;
}

.c9.is-clickable {
  cursor: pointer !important;
  pointer-events: all !important;
}

.c9.has-text-link-dark span {
  color: #4F4FFF !important;
}

.c9 span {
  font-family: Inter,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  text-align: left;
  background: #FFFFFF;
  color: #73848C;
}

.c9 span.preview {
  margin-left: 8px;
  font-size: 14px;
  color: #4F4FFF;
  cursor: pointer;
}

.c9 span.is-clickable {
  cursor: pointer !important;
  pointer-events: all !important;
}

.c8 {
  width: 100%;
}

.c8 td {
  border-top: 1px #f1f2f3 solid;
  font-size: 14px;
  font-weight: 400;
  padding: 8px 8px 8px 24px;
  color: #171A1C;
  vertical-align: middle;
}

.c8 tbody > tr:hover {
  background-color: #F1F2F3;
}

.c0 {
  height: 56px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 16px;
}

.c0 h1 {
  font-size: 24px;
  font-weight: 500;
  line-height: 32px;
  color: #000;
}

.c0 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
}

@media screen and (max-width:1023px) {
  .c2 > .c3:first-child,
  .c2 > .c3:last-child {
    border-radius: 0;
  }
}

<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Component
      theme={
        Object {
          "buttonStyles": Object {
            "fontSize": Object {
              "L": "16px",
              "M": "14px",
              "S": "14px",
            },
            "height": Object {
              "L": "40px",
              "M": "32px",
              "S": "24px",
            },
            "primary": Object {
              "backgroundColor": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
              "color": "#FFFFFF",
              "invertedColors": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
            },
            "secondary": Object {
              "backgroundColor": Object {
                "active": "#D5DADD",
                "hover": "#E3E6E8",
                "normal": "#F1F2F3",
              },
              "color": "#171A1C",
              "invertedColors": Object {
                "active": "#171A1C",
                "hover": "#454F54",
                "normal": "#73848C",
              },
            },
          },
          "layout": Object {
            "minWidth": "1200px",
            "navBarHeight": "3.25rem",
            "navBarWidth": "201px",
          },
          "menuStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "chevronIconColor": "#73848C",
            "color": Object {
              "active": "#171A1C",
              "hover": "#73848C",
              "normal": "#73848C",
            },
            "statusIconColor": Object {
              "offline": "#E51A1A",
              "online": "#5CD685",
            },
          },
          "pageLoader": Object {
            "borderBottomColor": "#FFFFFF",
            "borderColor": "#4F4FFF",
          },
          "paginationStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#C7CED1",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#C7CED1",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "primaryTabStyles": Object {
            "borderColor": Object {
              "active": "#4F4FFF",
              "hover": "transparent",
              "normal": "transparent",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "secondaryTabStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "selectStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#E3E6E8",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#ABB5BA",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "switch": Object {
            "checked": "#29A352",
            "unchecked": "#ABB5BA",
          },
          "tagStyles": Object {
            "backgroundColor": Object {
              "gray": "#E3E6E8",
              "green": "#D6F5E0",
              "yellow": "#FFEECC",
            },
            "color": "#171A1C",
          },
          "thStyles": Object {
            "backgroundColor": Object {
              "normal": "#FFFFFF",
            },
            "color": Object {
              "normal": "#73848C",
            },
            "previewColor": Object {
              "normal": "#4F4FFF",
            },
          },
        }
      }
    >
      <Brokers
        activeControllers={0}
        brokerCount={0}
        fetchBrokers={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        fetchClusterStats={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        inSyncReplicasCount={0}
        isFetched={false}
        offlinePartitionCount={0}
        onlinePartitionCount={0}
        outOfSyncReplicasCount={0}
        underReplicatedPartitionCount={0}
        version="1"
        zooKeeperStatus={0}
      >
        <div>
          <Styled(PageHeading)
            text="Brokers"
          >
            <PageHeading
              className="c0"
              text="Brokers"
            >
              <div
                className="c0"
              >
                <h1>
                  Brokers
                </h1>
                <div />
              </div>
            </PageHeading>
          </Styled(PageHeading)>
          <styled.div>
            <div
              className="c1"
            >
              <MetricsSection
                title="Uptime"
              >
                <div>
                  <h5
                    className="is-7 has-text-weight-medium mb-2"
                  >
                    Uptime
                  </h5>
                  <styled.div>
                    <div
                      className="c2"
                    >
                      <Indicator
                        label="Total Brokers"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Total Brokers
                                   
                                </div>
                              </styled.div>
                              <span>
                                0
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Active Controllers"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Active Controllers
                                   
                                </div>
                              </styled.div>
                              <span>
                                0
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Zookeeper Status"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Zookeeper Status
                                   
                                </div>
                              </styled.div>
                              <span>
                                <Styled(Tag)
                                  color="gray"
                                >
                                  <Tag
                                    className="c6"
                                    color="gray"
                                  >
                                    <p
                                      className="c6"
                                    >
                                      offline
                                    </p>
                                  </Tag>
                                </Styled(Tag)>
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Version"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Version
                                   
                                </div>
                              </styled.div>
                              <span>
                                1
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                    </div>
                  </styled.div>
                </div>
              </MetricsSection>
              <MetricsSection
                title="Partitions"
              >
                <div>
                  <h5
                    className="is-7 has-text-weight-medium mb-2"
                  >
                    Partitions
                  </h5>
                  <styled.div>
                    <div
                      className="c2"
                    >
                      <Indicator
                        isAlert={true}
                        label="Online"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Online
                                   
                                  <svg
                                    fill="none"
                                    height="4"
                                    viewBox="0 0 4 4"
                                    width="4"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <circle
                                      cx="2"
                                      cy="2"
                                      fill="#E61A1A"
                                      r="2"
                                    />
                                  </svg>
                                </div>
                              </styled.div>
                              <span>
                                0
                                <styled.span>
                                  <span
                                    className="c7"
                                  >
                                     
                                    of 
                                    0
                                  </span>
                                </styled.span>
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="URP"
                        title="Under replicated partitions"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div
                              title="Under replicated partitions"
                            >
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  URP
                                   
                                </div>
                              </styled.div>
                              <span>
                                0
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="In Sync Replicas"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  In Sync Replicas
                                   
                                </div>
                              </styled.div>
                              <span>
                                0
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Out of Sync Replicas"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Out of Sync Replicas
                                   
                                </div>
                              </styled.div>
                              <span>
                                0
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                    </div>
                  </styled.div>
                </div>
              </MetricsSection>
            </div>
          </styled.div>
        </div>
        <styled.table
          isFullwidth={true}
        >
          <table
            className="c8"
          >
            <thead>
              <tr>
                <TableHeaderCell
                  title="Broker"
                >
                  <styled.th
                    className=""
                    title="Broker"
                  >
                    <th
                      className="c9"
                      title="Broker"
                    >
                      <span
                        className="title"
                      >
                        Broker
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
                <TableHeaderCell
                  title="Segment size (Mb)"
                >
                  <styled.th
                    className=""
                    title="Segment size (Mb)"
                  >
                    <th
                      className="c9"
                      title="Segment size (Mb)"
                    >
                      <span
                        className="title"
                      >
                        Segment size (Mb)
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
                <TableHeaderCell
                  title="Segment Count"
                >
                  <styled.th
                    className=""
                    title="Segment Count"
                  >
                    <th
                      className="c9"
                      title="Segment Count"
                    >
                      <span
                        className="title"
                      >
                        Segment Count
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
              </tr>
            </thead>
            <tbody />
          </table>
        </styled.table>
      </Brokers>
    </Component>
  </Router>
</StaticRouter>
`;

exports[`Brokers Component Brokers matches snapshot 1`] = `
.c1 {
  padding: 1.5rem 1rem;
  background: #F1F2F3;
  margin-bottom: 0.5rem !important;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  background-color: white;
  height: 68px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 150px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 12px 16px;
  box-shadow: 3px 3px 3px rgba(0,0,0,0.08);
  margin: 0 0 3px 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  font-weight: 500;
  font-size: 12px;
  color: #73848C;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 > .c3:first-child {
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c2 > .c3:last-child {
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c7 {
  color: #ABB5BA;
  font-size: 14px;
}

.c6 {
  border: none;
  border-radius: 16px;
  height: 20px;
  line-height: 20px;
  background-color: #D6F5E0;
  color: #171A1C;
  font-size: 12px;
  display: inline-block;
  padding-left: 0.75em;
  padding-right: 0.75em;
  text-align: center;
}

.c9 {
  padding: 4px 0 4px 24px !important;
  border-bottom-width: 1px !important;
  vertical-align: middle !important;
}

.c9.is-clickable {
  cursor: pointer !important;
  pointer-events: all !important;
}

.c9.has-text-link-dark span {
  color: #4F4FFF !important;
}

.c9 span {
  font-family: Inter,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  text-align: left;
  background: #FFFFFF;
  color: #73848C;
}

.c9 span.preview {
  margin-left: 8px;
  font-size: 14px;
  color: #4F4FFF;
  cursor: pointer;
}

.c9 span.is-clickable {
  cursor: pointer !important;
  pointer-events: all !important;
}

.c8 {
  width: 100%;
}

.c8 td {
  border-top: 1px #f1f2f3 solid;
  font-size: 14px;
  font-weight: 400;
  padding: 8px 8px 8px 24px;
  color: #171A1C;
  vertical-align: middle;
}

.c8 tbody > tr:hover {
  background-color: #F1F2F3;
}

.c0 {
  height: 56px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 16px;
}

.c0 h1 {
  font-size: 24px;
  font-weight: 500;
  line-height: 32px;
  color: #000;
}

.c0 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
}

@media screen and (max-width:1023px) {
  .c2 > .c3:first-child,
  .c2 > .c3:last-child {
    border-radius: 0;
  }
}

<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Component
      theme={
        Object {
          "buttonStyles": Object {
            "fontSize": Object {
              "L": "16px",
              "M": "14px",
              "S": "14px",
            },
            "height": Object {
              "L": "40px",
              "M": "32px",
              "S": "24px",
            },
            "primary": Object {
              "backgroundColor": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
              "color": "#FFFFFF",
              "invertedColors": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
            },
            "secondary": Object {
              "backgroundColor": Object {
                "active": "#D5DADD",
                "hover": "#E3E6E8",
                "normal": "#F1F2F3",
              },
              "color": "#171A1C",
              "invertedColors": Object {
                "active": "#171A1C",
                "hover": "#454F54",
                "normal": "#73848C",
              },
            },
          },
          "layout": Object {
            "minWidth": "1200px",
            "navBarHeight": "3.25rem",
            "navBarWidth": "201px",
          },
          "menuStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "chevronIconColor": "#73848C",
            "color": Object {
              "active": "#171A1C",
              "hover": "#73848C",
              "normal": "#73848C",
            },
            "statusIconColor": Object {
              "offline": "#E51A1A",
              "online": "#5CD685",
            },
          },
          "pageLoader": Object {
            "borderBottomColor": "#FFFFFF",
            "borderColor": "#4F4FFF",
          },
          "paginationStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#C7CED1",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#C7CED1",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "primaryTabStyles": Object {
            "borderColor": Object {
              "active": "#4F4FFF",
              "hover": "transparent",
              "normal": "transparent",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "secondaryTabStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "selectStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#E3E6E8",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#ABB5BA",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "switch": Object {
            "checked": "#29A352",
            "unchecked": "#ABB5BA",
          },
          "tagStyles": Object {
            "backgroundColor": Object {
              "gray": "#E3E6E8",
              "green": "#D6F5E0",
              "yellow": "#FFEECC",
            },
            "color": "#171A1C",
          },
          "thStyles": Object {
            "backgroundColor": Object {
              "normal": "#FFFFFF",
            },
            "color": Object {
              "normal": "#73848C",
            },
            "previewColor": Object {
              "normal": "#4F4FFF",
            },
          },
        }
      }
    >
      <Brokers
        activeControllers={1}
        brokerCount={1}
        diskUsage={
          Array [
            Object {
              "brokerId": 1,
              "segmentCount": 64,
              "segmentSize": 60718,
            },
          ]
        }
        fetchBrokers={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        fetchClusterStats={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        inSyncReplicasCount={64}
        isFetched={true}
        offlinePartitionCount={0}
        onlinePartitionCount={64}
        outOfSyncReplicasCount={0}
        underReplicatedPartitionCount={0}
        version="1"
        zooKeeperStatus={1}
      >
        <div>
          <Styled(PageHeading)
            text="Brokers"
          >
            <PageHeading
              className="c0"
              text="Brokers"
            >
              <div
                className="c0"
              >
                <h1>
                  Brokers
                </h1>
                <div />
              </div>
            </PageHeading>
          </Styled(PageHeading)>
          <styled.div>
            <div
              className="c1"
            >
              <MetricsSection
                title="Uptime"
              >
                <div>
                  <h5
                    className="is-7 has-text-weight-medium mb-2"
                  >
                    Uptime
                  </h5>
                  <styled.div>
                    <div
                      className="c2"
                    >
                      <Indicator
                        label="Total Brokers"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Total Brokers
                                   
                                </div>
                              </styled.div>
                              <span>
                                1
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Active Controllers"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Active Controllers
                                   
                                </div>
                              </styled.div>
                              <span>
                                1
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Zookeeper Status"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Zookeeper Status
                                   
                                </div>
                              </styled.div>
                              <span>
                                <Styled(Tag)
                                  color="green"
                                >
                                  <Tag
                                    className="c6"
                                    color="green"
                                  >
                                    <p
                                      className="c6"
                                    >
                                      online
                                    </p>
                                  </Tag>
                                </Styled(Tag)>
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Version"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Version
                                   
                                </div>
                              </styled.div>
                              <span>
                                1
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                    </div>
                  </styled.div>
                </div>
              </MetricsSection>
              <MetricsSection
                title="Partitions"
              >
                <div>
                  <h5
                    className="is-7 has-text-weight-medium mb-2"
                  >
                    Partitions
                  </h5>
                  <styled.div>
                    <div
                      className="c2"
                    >
                      <Indicator
                        isAlert={true}
                        label="Online"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Online
                                   
                                  <svg
                                    fill="none"
                                    height="4"
                                    viewBox="0 0 4 4"
                                    width="4"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <circle
                                      cx="2"
                                      cy="2"
                                      fill="#E61A1A"
                                      r="2"
                                    />
                                  </svg>
                                </div>
                              </styled.div>
                              <span>
                                64
                                <styled.span>
                                  <span
                                    className="c7"
                                  >
                                     
                                    of 
                                    64
                                  </span>
                                </styled.span>
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="URP"
                        title="Under replicated partitions"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div
                              title="Under replicated partitions"
                            >
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  URP
                                   
                                </div>
                              </styled.div>
                              <span>
                                0
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="In Sync Replicas"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  In Sync Replicas
                                   
                                </div>
                              </styled.div>
                              <span>
                                64
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                      <Indicator
                        label="Out of Sync Replicas"
                      >
                        <styled.div>
                          <div
                            className="c3 c4"
                          >
                            <div>
                              <styled.div>
                                <div
                                  className="c5"
                                >
                                  Out of Sync Replicas
                                   
                                </div>
                              </styled.div>
                              <span>
                                0
                              </span>
                            </div>
                          </div>
                        </styled.div>
                      </Indicator>
                    </div>
                  </styled.div>
                </div>
              </MetricsSection>
            </div>
          </styled.div>
        </div>
        <styled.table
          isFullwidth={true}
        >
          <table
            className="c8"
          >
            <thead>
              <tr>
                <TableHeaderCell
                  title="Broker"
                >
                  <styled.th
                    className=""
                    title="Broker"
                  >
                    <th
                      className="c9"
                      title="Broker"
                    >
                      <span
                        className="title"
                      >
                        Broker
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
                <TableHeaderCell
                  title="Segment size (Mb)"
                >
                  <styled.th
                    className=""
                    title="Segment size (Mb)"
                  >
                    <th
                      className="c9"
                      title="Segment size (Mb)"
                    >
                      <span
                        className="title"
                      >
                        Segment size (Mb)
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
                <TableHeaderCell
                  title="Segment Count"
                >
                  <styled.th
                    className=""
                    title="Segment Count"
                  >
                    <th
                      className="c9"
                      title="Segment Count"
                    >
                      <span
                        className="title"
                      >
                        Segment Count
                      </span>
                    </th>
                  </styled.th>
                </TableHeaderCell>
              </tr>
            </thead>
            <tbody>
              <tr
                key="1"
              >
                <td>
                  1
                </td>
                <td>
                  <BytesFormatted
                    value={60718}
                  >
                    <span>
                      59KB
                    </span>
                  </BytesFormatted>
                </td>
                <td>
                  64
                </td>
              </tr>
            </tbody>
          </table>
        </styled.table>
      </Brokers>
    </Component>
  </Router>
</StaticRouter>
`;
